# packages

./: README.md
example_package/: CMakeLists.txt  package.xml
example_package/include/example_package/: example_package.h
example_package/launch/: example_package.launch
example_package/msg/: SetVelocities.msg
example_package/nodes/: example_package_node.cpp
example_package/src/: example_package.cpp
eye-in-hand/eye_in_hand/: CMakeLists.txt  package.xml
eye-in-hand/eye_in_hand_launch/: CMakeLists.txt  package.xml  package.xml.autosave
eye-in-hand/eye_in_hand_launch/launch/: eye_in_hand.launch
eye-in-hand/visual_features_extractor/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
eye-in-hand/visual_features_extractor/include/visual_features_extractor/: visual_features_extractor.h
eye-in-hand/visual_features_extractor/launch/: visual_features_extractor.launch
eye-in-hand/visual_features_extractor/nodes/: visual_features_extractor_node.cpp
eye-in-hand/visual_features_extractor/src/: visual_features_extractor.cpp  visual_features_extractor_nodelet.cpp
eye-to-hand/eye_to_hand/: CMakeLists.txt  package.xml
eye-to-hand/eye_to_hand_launch/: CMakeLists.txt  package.xml
eye-to-hand/eye_to_hand_launch/launch/: eye_to_hand.launch
eye-to-hand/kinect_fusion/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
eye-to-hand/kinect_fusion/include/kinect_fusion/: kinect_fusion.h
eye-to-hand/kinect_fusion/launch/: hri_kinect_fusion.launch  ics_kinect_fusion.launch
eye-to-hand/kinect_fusion/nodes/: kinect_fusion_node.cpp
eye-to-hand/kinect_fusion/src/: kinect_fusion.cpp  kinect_fusion_nodelet.cpp
eye-to-hand/obstacle_detector/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
eye-to-hand/obstacle_detector/config/: hri_parameters.yaml
eye-to-hand/obstacle_detector/include/obstacle_detector/: obstacle_detector.h
eye-to-hand/obstacle_detector/launch/: obstacle_detector.launch
eye-to-hand/obstacle_detector/nodes/: obstacle_detector_node.cpp
eye-to-hand/obstacle_detector/src/: obstacle_detector.cpp  obstacle_detector_nodelet.cpp
imbvs_with_obstacles_avoidance/: CMakeLists.txt  README.md  package.xml
imbvs_with_obstacles_avoidance/include/imbvs_with_obstacles_avoidance/: imbvs_with_obstacles_avoidance.h
imbvs_with_obstacles_avoidance/launch/: imbvs_with_obstacles_avodance.launch  imbvs_with_obstacles_avodance.launch~
imbvs_with_obstacles_avoidance/src/: imbvs_with_obstacles_avoidance.cpp
kuka-lwr/: .travis.yml  README.md
kuka-lwr/hri_lwr/hri_lwr/: package.xml
kuka-lwr/hri_lwr/hri_lwr_launch/: CMakeLists.txt  package.xml
kuka-lwr/hri_lwr/hri_lwr_launch/launch/: hri_lwr.launch  rviz_config.rviz
kuka-lwr/hri_lwr/hri_lwr_setup/: CMakeLists.txt  package.xml
kuka-lwr/ics_lwr/ics_lwr/: package.xml
kuka-lwr/ics_lwr/ics_lwr_launch/: CMakeLists.txt  package.xml
kuka-lwr/ics_lwr/ics_lwr_launch/launch/: ics_lwr.launch  rviz_config.rviz
kuka-lwr/ics_lwr/ics_lwr_setup/: CMakeLists.txt  package.xml
kuka-lwr/ics_lwr/ics_lwr_setup/config/: hw_interface.yaml
kuka-lwr/ics_lwr/ics_lwr_setup/enviroment/: brick_pick_and_place_environment.urdf.xacro  ics_lwr_enviroment.urdf.xacro
kuka-lwr/lwr-traj-generator/: CMakeLists.txt  package.xml
kuka-lwr/lwr-traj-generator/include/lwr_traj_generator/: LwrTrajGenerator.h
kuka-lwr/lwr-traj-generator/src/: LwrTrajGenerator.cpp
kuka-lwr/lwr_controllers/: package.xml
kuka-lwr/lwr_controllers/include/lwr_controllers/: KinematicChainControllerBase.h
kuka-lwr/lwr_description/model/: kuka_lwr.gazebo.xacro  kuka_lwr.transmission.xacro  kuka_lwr.urdf.xacro  kuka_materials.xacro
kuka-lwr/lwr_hw/: CMakeLists.txt  package.xml
kuka-lwr/lwr_hw/include/lwr_hw/: lwr_hw.h  lwr_hw_fri.h  lwr_hw_fril.h  lwr_hw_gazebo.h
kuka-lwr/lwr_hw/nodes/: lwr_hw_fril_node.cpp  lwr_hw_gazebo_plugin.cpp
kuka-lwr/lwr_hw/src/fri/: friremote.cpp
kuka-lwr/lwr_hw/src/lwr_hw/: lwr_hw.cpp  lwr_hw_fri.cpp  lwr_hw_fril.cpp  lwr_hw_gazebo.cpp
kuka-lwr/lwr_hw_interfaces/: CMakeLists.txt  package.xml
kuka-lwr/lwr_hw_interfaces/include/lwr_hw_interfaces/: joint_generic_command_interface.h
nodelets_example/: CMakeLists.txt  nodelet_plugins.xml  package.xml
nodelets_example/include/nodelets_example/: nodelets_example.h
nodelets_example/launch/: nodelets_example.launch
nodelets_example/nodes/: nodelets_example_node.cpp
nodelets_example/src/: nodelets_example.cpp  nodelets_example_nodelet.cpp
visual-servoing-with-safe-interaction/: CMakeLists.txt  README.md  package.xml
visual-servoing-with-safe-interaction/include/visual_servoing_with_safe_interaction/: visual_servoing_with_safe_interaction.h
visual-servoing-with-safe-interaction/launch/: visual_servoing_with_safe_interaction.launch
visual-servoing-with-safe-interaction/nodes/: visual_servoing_with_safe_interaction_node.cpp
visual-servoing-with-safe-interaction/src/: visual_servoing_with_safe_interaction.cpp
