<package format="2">
  <name>example_package</name>
  <version>0.2.0</version>
  <description>The example_package package</description>
  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>
  <license>TODO</license>
  <author>Dimitar Rakov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


  <export>  <!-- Other tools can request additional information be placed here -->   </export>

</package>
