<package format="2">
  <name>visual_servoing_with_safe_interaction</name>
  <version>0.2.0</version>
  <description> The visual_servoing_with_safe_interaction package</description>
  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>

  <license>TODO</license>

  <author>Dimitar Rakov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>

</package>
