<?xml version="1.0"?>
<package>
  <name>eye_in_hand_launch</name>
  <version>0.1.0</version>
  <description>The eye_in_hand_launch package to launch usb_node and visual extractor.</description>

  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>usb_cam</run_depend>
  <run_depend>vis_feature_extract</run_depend>

  <export>
  </export>
</package>
