<package format="2">
  <name>visual_features_extractor</name>
  <version>0.1.0</version>
  <description>The visual_features_extractor package</description>
  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>
  <license>TODO</license>
  <author>Dimitar Rakov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>

