<package format="2">
  <name>visual_features_extractor</name>
  <version>0.9.0</version>
  <description>The visual_features_extractor package</description>
  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>
  <license>TODO</license>
  <author email="dimitar.rakov@tum.de">Dimitar Rakov</author>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
