<package>
  <name>eye_to_hand</name>
  <version>0.0.2</version>
  <description>
    ROS meta-package containing eye_to_hand packages.
  </description>
  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>
  <license>ToDo</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- PACKAGES -->
  <run_depend>kinect2_bridge</run_depend>
  <run_depend>kinect_fusion</run_depend>
  <run_depend>obstacle_detector</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
