<package format="2">
  <name>eye_to_hand_launch</name>
  <version>1.0.1</version>
  <description>The eye_in_hand_launch package to launch kinect2_bridge and obstacle_detector</description>
  <maintainer email="dimitar.rakov@gmail.com">Dimitar Rakov</maintainer>
  <license>BSD</license>
  <author>Dimitar Rakov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kinect2_viewer</depend>
  <depend>kinect2_bridge</depend>
  <depend>obstacle_detector</depend>

  <export>
  </export>

</package>
