<package format="2">
  <name>lwr_traj_generator</name>
  <version>1.0.0</version>
  <description>The lwr_traj_generator package</description>
  <maintainer email="dimitar.rakov@gmail.com">Dimitar Rakov</maintainer>
  <license>TODO</license>
  <author>Dimitar Rakov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
