<package format="2">
  <name>ics_lwr_launch</name>
  <version>0.2.0</version>
  <description>The ics_lwr_launch package to control everything that needs to launched.</description>

  <maintainer email="dimitar.rakov@gmail.com">Dimitar Rakov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ics_lwr_setup</exec_depend>

  <export>
  </export>
</package>
